--- a/404.md
+++ b/404.md
@@ -1,10 +1,8 @@
 ---
 permalink: /404.html
 ---
-<!DOCTYPE html>
-<head>
-  <title>Oops!</title>
-</head>
-<html>
-  <h1>We hit a roadblock, could you try again?</h1>
-</html>
+# Uh oh!
+
+We had hit a roadblock with your request.
+
+Can you try that again?
